# kanomi

./: CMakeLists.txt  README.markdown  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _demo___config_8hpp_source.html  _demo__main_8cpp_source.html  _kanomi___basis_function_8hpp_source.html  _kanomi___build_8hpp_source.html  _kanomi___build_manager_8hpp_source.html  _kanomi___constant_scalar_8hpp_source.html  _kanomi___demangle_8cpp_source.html  _kanomi___demangle_8hpp_source.html  _kanomi___do_evaluate_8hpp_source.html  _kanomi___do_setup_8hpp_source.html  _kanomi___e_q_8hpp_source.html  _kanomi___e_q___energy_8hpp_source.html  _kanomi___energy_residual_8hpp_source.html  _kanomi___factory_8hpp_source.html  _kanomi___factory___thermal_conductivity_8hpp_source.html  _kanomi___field_names_8hpp_source.html  _kanomi___grad_scalar_field_8hpp_source.html  _kanomi___manager_8hpp_source.html  _kanomi___model_8hpp_source.html  _kanomi___model_names_8hpp_source.html  _kanomi___model_provider_8hpp_source.html  _kanomi___models___thermal_conductivity_8hpp_source.html  _kanomi___named_8hpp_source.html  _kanomi___output_graphviz_8hpp_source.html  _kanomi___scalar_field_8hpp_source.html  _kanomi___scalar_polynomial_8hpp_source.html  _kanomi___stencils_8cpp_source.html  _kanomi___stencils_8hpp_source.html  _kanomi___tag_8hpp_source.html  _kanomi___type_info_8hpp_source.html  _kanomi__autoversion_8hpp_source.html  _kanomi__main_8cpp_source.html  _kanomi__mpl_8hpp_source.html  _kanomi__provider_8hpp_source.html  _kanomi__version_8cpp_source.html  _kanomi__version_8hpp_source.html  (+317 more)
doc/: do-cmake  do-trilinos-cmake  doxygen.config
search/: all_61.html  all_62.html  all_64.html  all_65.html  all_66.html  all_68.html  all_6d.html  all_6e.html  all_6f.html  all_71.html  all_73.html  all_74.html  all_75.html  classes_61.html  classes_62.html  classes_63.html  classes_65.html  classes_66.html  classes_67.html  classes_69.html  classes_6d.html  classes_6f.html  classes_70.html  classes_73.html  classes_74.html  classes_75.html  search.js
src/: CMakeLists.txt  Demo_Config.hpp  Demo_main.cpp  Kanomi_BasisFunction.hpp  Kanomi_Build.hpp  Kanomi_BuildManager.hpp  Kanomi_ConstantScalar.hpp  Kanomi_Demangle.cpp  Kanomi_Demangle.hpp  Kanomi_DoEvaluate.hpp  Kanomi_DoSetup.hpp  Kanomi_EQ.hpp  Kanomi_EQ_Energy.hpp  Kanomi_EnergyResidual.hpp  Kanomi_Factory.hpp  Kanomi_Factory_ThermalConductivity.hpp  Kanomi_FieldNames.hpp  Kanomi_GradScalarField.hpp  Kanomi_Manager.hpp  Kanomi_Model.hpp  Kanomi_ModelNames.hpp  Kanomi_ModelProvider.hpp  Kanomi_Models_ThermalConductivity.hpp  Kanomi_Named.hpp  Kanomi_OutputGraphviz.hpp  Kanomi_ScalarField.hpp  Kanomi_ScalarPolynomial.hpp  Kanomi_Stencils.cpp  Kanomi_Stencils.hpp  Kanomi_Tag.hpp  Kanomi_TypeInfo.hpp  Kanomi_main.cpp  Kanomi_mpl.hpp  Kanomi_provider.hpp  Kanomi_version.cpp  Kanomi_version.hpp  User_Config.hpp  main.cpp  manager.hpp  stencils.cpp  (+2 more)
